--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,20 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.min.css"
+    />
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+
     <%- include('./partials/navbar') %>
 
-    <h1>Welcome to Elit Subscriptions manger</h1>
+    <div class="container">
 
-    <a href="/auth/login">
-            <button>Login</button>
-        </a>
-        <br>
-        <a href="/auth/signup">
-            <button>sign up</button>
-        </a>
-    
+        <div class="card text-center">
+            <h1>Welcome to Elit Subscriptions Manager</h1>
+
+            <p class="desc-txt">
+                Manage subscriptions easily for admins and subscribers.
+            </p>
+
+            <div class="button-center">
+                <a href="/auth/login">
+                    <button>Login</button>
+                </a>
+
+                <a href="/auth/signup">
+                    <button class="button-outline">Sign Up</button>
+                </a>
+            </div>
+        </div>
+
+    </div>
 
 </body>
 </html>
