--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,10 +1,25 @@
-<nav>
-    <% if (user) { %>
-        <span>Logged in as: <%= user.phone %></span>
-        <a href="/auth/logout">Logout</a>
-    <% } else { %>
-        <a href="/auth/login">Login</a>
-        <a href="/auth/signup">Sign Up</a>
+<nav class="navbar">
+  <div class="navbar-container">
+
+    <div class="navbar-left">
+      <a href="/" class="navbar-home">Subs Manager</a>
+    </div>
+
+    <% if (user && user.role === 'admin') { %>
+      <form action="/admin/subscriptions" method="GET" class="navbar-search">
+        <input type="text" name="phone" placeholder="Search by phone" required />
+        <button type="submit">Search</button>
+      </form>
     <% } %>
+
+    <div class="navbar-right">
+      <% if (user) { %>
+        <span class="navbar-user"><%= user.phone %></span>
+        <a href="/auth/logout" class="navbar-link">Logout</a>
+      <% } else { %>
+        <a href="/auth/login" class="navbar-link">Login</a>
+      <% } %>
+    </div>
+
+  </div>
 </nav>
-<hr>
